@@ -6,6 +6,9 @@
 
 RELEASE 2.3.2.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Anatoly Techtonik:
+    - Do not fail on EnsureSConsVersion when running from checkout
+
   From Kendrick Boyd and Rob Managan:
     - Fixed the newglossary action to work with VariantDir (LaTeX).
 
